[gd_scene load_steps=11 format=2]

[ext_resource path="res://logo/SimpleTools_logo.png" type="Texture" id=1]
[ext_resource path="res://logo/productLarge.png" type="Texture" id=2]
[ext_resource path="res://background/background01.png" type="Texture" id=3]
[ext_resource path="res://button/ButtonSTARTpressed.png" type="Texture" id=4]
[ext_resource path="res://button/ButtonSTARTnormal.png" type="Texture" id=5]
[ext_resource path="res://button/ButtonABOUTpressed.png" type="Texture" id=6]
[ext_resource path="res://scripts/Welcome.gd" type="Script" id=7]
[ext_resource path="res://button/ButtonHELPnormal.png" type="Texture" id=8]
[ext_resource path="res://button/ButtonHELPpressed.png" type="Texture" id=9]
[ext_resource path="res://button/ButtonABOUTnormal.png" type="Texture" id=10]

[node name="Welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Top MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 82
custom_constants/margin_top = 90

[node name="Control" type="Control" parent="Top MarginContainer"]
margin_top = 90.0
margin_right = 518.0
margin_bottom = 1024.0

[node name="MarginContainer" type="MarginContainer" parent="Top MarginContainer/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -466.0
margin_right = 67.0
margin_bottom = 319.0

[node name="TextureRect" type="TextureRect" parent="Top MarginContainer/Control/MarginContainer"]
margin_right = 533.0
margin_bottom = 319.0
texture = ExtResource( 1 )

[node name="Middle MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 82
custom_constants/margin_top = 202

[node name="Control2" type="Control" parent="Middle MarginContainer"]
margin_top = 202.0
margin_right = 518.0
margin_bottom = 1024.0

[node name="MarginContainer2" type="MarginContainer" parent="Middle MarginContainer/Control2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -273.0
margin_top = -136.5
margin_bottom = 136.5

[node name="TextureRect" type="TextureRect" parent="Middle MarginContainer/Control2/MarginContainer2"]
margin_right = 273.0
margin_bottom = 273.0
texture = ExtResource( 2 )

[node name="Help Button MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
custom_constants/margin_right = 230
custom_constants/margin_bottom = 127

[node name="Help Control" type="Control" parent="Help Button MarginContainer"]
margin_right = 370.0
margin_bottom = 895.0

[node name="HelpHBoxContainer" type="HBoxContainer" parent="Help Button MarginContainer/Help Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -211.0
margin_top = -104.0
margin_right = 189.0

[node name="welcomeAbout" type="TextureButton" parent="Help Button MarginContainer/Help Control/HelpHBoxContainer"]
margin_right = 185.0
margin_bottom = 104.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 6 )

[node name="welcomeHelp" type="TextureButton" parent="Help Button MarginContainer/Help Control/HelpHBoxContainer"]
margin_left = 189.0
margin_right = 375.0
margin_bottom = 104.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="Bottom MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 894.0
custom_constants/margin_right = 66
custom_constants/margin_bottom = 22

[node name="Control3" type="Control" parent="Bottom MarginContainer2"]
margin_right = 534.0
margin_bottom = 108.0

[node name="MarginContainer3" type="MarginContainer" parent="Bottom MarginContainer2/Control3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -104.0
custom_constants/margin_right = -13

[node name="welcomeStart" type="TextureButton" parent="Bottom MarginContainer2/Control3/MarginContainer3"]
margin_right = 199.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[connection signal="pressed" from="Help Button MarginContainer/Help Control/HelpHBoxContainer/welcomeAbout" to="." method="goto_about_screen"]
[connection signal="pressed" from="Help Button MarginContainer/Help Control/HelpHBoxContainer/welcomeHelp" to="." method="goto_help_screen"]
[connection signal="pressed" from="Bottom MarginContainer2/Control3/MarginContainer3/welcomeStart" to="." method="goto_cost_screen"]
